--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,6 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Build solution and generate NuGet package
-      run: |  
-          dotnet pack -c Release -o out 
+      run: dotnet ./EFSorter/EFSorter.csproj pack -c Release -o out 
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
