--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,8 @@ jobs:
     - name: Build solution and generate NuGet package
       run: 
           |
+          cd EFSorter
           ls
-          dotnet /EFSorter/EFSorter.csproj pack -c Release -o out 
+          dotnet EFSorter/EFSorter.csproj pack -c Release -o out 
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
