--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,6 +33,6 @@ jobs:
           |
           cd EFSorter
           ls
-          dotnet EFSorter.csproj pack -c Release -o out 
+          dotnet pack EFSorter.csproj -c Release -o out 
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
