--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,15 +24,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
     - name: Build solution and generate NuGet package
-      run: 
-          |
-          cd EFSorter
-          ls
-          dotnet pack EFSorter.csproj -c Release -o out 
+      run: dotnet pack ./EFSorter/EFSorter.csproj -c Release -o out 
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
