--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Build solution and generate NuGet package
-      run: dotnet pack ./EFSorter/EFSorter.csproj -c Release -o out 
+      run: dotnet pack ./EFSorter.csproj -c Release -o out 
     - name: Push generated package to GitHub registry
       run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
