--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,13 +18,12 @@ jobs:
     - uses: NuGet/setup-nuget@v1.1.1
       with:
            nuget-api-key: ${{secrets.NUGET_SECRET}}
-           source-url: https://nuget.pkg.github.com/<organization>/index.json
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
     - name: Build solution and generate NuGet package
-      run: dotnet pack ./EFSorter.csproj -c Release -o out 
+      run: dotnet pack ./EFSorter/EFSorter.csproj -c Release -o ./EFSorter/out
     - name: Push generated package to GitHub registry
-      run: dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
+      run: dotnet nuget push ./EFSorter/out/*.nupkg --skip-duplicate --no-symbols -k ${{secrets.NUGET_SECRET}} -s https://api.nuget.org/v3/index.json true
