--- a/EFSorter/EFSorter.csproj
+++ b/EFSorter/EFSorter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<Description>Ef soreter for IQuery</Description>
 		<FileVersion>2.0.1.1</FileVersion>
-		<Version>2.0.6</Version>
+		<Version>2.0.7</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
