--- a/EFSorter.ConsoleApp/EFSorter.ConsoleApp.csproj
+++ b/EFSorter.ConsoleApp/EFSorter.ConsoleApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
   </ItemGroup>
 
   <ItemGroup>
